k8s/deployment copy.yaml
# k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: weather-app
  name: weather-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather-app
  template:
    metadata:
      labels:
        app: weather-app
    spec:
      containers:
        - image: ghcr.io/sangbinlee/weather-app:0fedb248915fd194fa5217389b0479576e8e3d34
          imagePullPolicy: Always
          name: weather-app
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: weather-app
  name: weather-app-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: weather-app
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  labels:
    app: weather-app
  name: weather-app-ingress
spec:
  rules:
    - host: weather.dev9.shop
      http:
        paths:
          - backend:
              service:
                name: weather-app-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - weather.dev9.shop
      secretName: weather-app-tls
