k8s/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: chat
---
# k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-server-app
  namespace: chat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat-server-app
  template:
    metadata:
      labels:
        app: chat-server-app
    spec:
      containers:
        - image: ghcr.io/sangbinlee/chat-server-app:2d1f757e3dc6b9b5c901b659417ce3de17338820
          imagePullPolicy: Always
          name: chat-server-app
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
---
# k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-server-app
  namespace: chat
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: chat-server-app
  type: ClusterIP
---
# k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx



    # 🔥 이거 추가 (핵심)
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: chat-server-app

    nginx.ingress.kubernetes.io/upgrade: "websocket"
    nginx.ingress.kubernetes.io/connection: "upgrade"


  name: chat-server-app-ingress
  namespace: chat
spec:
  rules:
    - host: chat.dev9.shop
      http:
        paths:
          - backend:
              service:
                name: chat-server-app
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - chat.dev9.shop
      secretName: chat-server-app-tls
